<resources>
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Agregar hora</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="new_notification">Es hora de darle de comer a tu amigo!!!</string>
    <string name="app_name">Pet feeder</string>
    <string name="name">Name</string>
    <string name="ingresar">Ingresar</string>
    <string name="registro">registro</string>
    <string name="Registrar">Button</string>
    <string name="volver">volver</string>
    <string name="Comenzar">Comience</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="correo1">Correo</string>
    <string name="comience">comience</string>
    <string name="telefono">telefono</string>
    <string name="consultar_usuarios">Consultar Usuarios</string>
    <string name="portada">Portada</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="contrase_aa">Contraseña</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="registrar_mascota">Registrar Mascota</string>
    <string name="nombre_de_la_mascota">Nombre de la Mascota</string>
    <string name="edad">Edad</string>
    <string name="raza">Raza</string>
    <string name="tama_o">tamaño</string>
    <string name="a_adir">añadir</string>
    <string name="textview">TextView</string>
    <string name="telefonoo">telefonoo</string>
    <string name="ubicacionn">ubicacionn</string>
    <string name="nombreuser">nombreuser</string>
    <string name="iduser">iduser</string>
    <string name="ver_lista_de_mascotas">Ver Lista de Mascotas</string>
    <string name="tel_fono">Teléfono</string>
    <string name="registrar">Registrar</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="edad_en_a_os">Edad (en años)</string>
    <string name="tama_o_en_cm">Tamaño (en cm)</string>
    <string name="ver_lista_de_usuarios_registrados"> Ver Lista de usuarios </string>
    <string name="correo">Correo</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="nombreusuario">NombreUsuario</string>
    <string name="email">email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombres">Nombres</string>
    <string name="nombre_de_usuario2">Nombre de usuario</string>
    <string name="ver_mis_mascotas">Ver mis Mascotas</string>
    <string name="bienvenida">Bienvenido al menú</string>
    <string name="seleccione_un_tama_o">Seleccione un Tamaño</string>
    <string name="a_adir_mascota">Añadir mascota</string>
    <string name="dar_comida">Dar comida</string>
    <string name="dar_agua">Dar agua</string>
    <string name="horario_de_comida">Horario de comida</string>
    <string name="raza_mascota">Raza Mascota</string>
    <string name="idmascota">IdMascota</string>
    <string name="nombre_de_mascota">Nombre de mascota</string>
    <string name="due_o">Dueño</string>
    <string name="id_del_due_o">Id del dueño</string>
    <string name="tama_o_d_la_mascota">Tamaño de la mascota</string>
    <string name="nombres_completos">Nombres Completos</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>

</resources>